--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <version>5.1.36</version>
         </dependency>
 
+        <!--Hiberanate-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.0.1.Final</version>
+        </dependency>
 
         <!--Logger-->
         <dependency>
